--- a/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_not_passed/.yml
+++ b/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_not_passed/.yml
@@ -7,8 +7,6 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      User-Agent:
-      - Travis/1.5.5 (Darwin; Ruby 1.9.3-p385; RubyGems 2.0.3) Faraday/0.8.8 Typhoeus/0.6.5
       Accept:
       - application/json; version=2
       Authorization:
@@ -29,9 +27,9 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Date:
-      - Sat, 05 Oct 2013 12:19:39 GMT
+      - Sat, 19 Oct 2013 09:13:48 GMT
       Etag:
-      - ! '"eb2a1678701a75e0af71a6180593d08c"'
+      - ! '"7c2fa1741ca4c87a5bc1846fada825af"'
       Server:
       - nginx/1.5.2
       Status:
@@ -49,14 +47,14 @@ http_interactions:
       X-Pattern:
       - /:owner_name/:name
       Content-Length:
-      - '324'
+      - '308'
       Connection:
       - keep-alive
     body:
       encoding: US-ASCII
-      string: ! '{"repo":{"id":95390,"slug":"rails/rails-private","description":"","last_build_id":1345750,"last_build_number":"395","last_build_state":"passed","last_build_duration":730,"last_build_language":null,"last_build_started_at":"2013-10-04T21:02:25Z","last_build_finished_at":"2013-10-04T21:14:35Z","github_language":"Ruby"}}'
+      string: ! '{"repo":{"id":95390,"slug":"rails/rails-private","description":"","last_build_id":1443071,"last_build_number":"641","last_build_state":"started","last_build_duration":null,"last_build_language":null,"last_build_started_at":"2013-10-19T09:13:35Z","last_build_finished_at":null,"github_language":"Ruby"}}'
     http_version:
-  recorded_at: Sat, 05 Oct 2013 12:19:41 GMT
+  recorded_at: Sat, 19 Oct 2013 09:13:53 GMT
 - request:
     method: get
     uri: https://api.travis-ci.com/repos/95390/branches/events-framework
@@ -64,8 +62,6 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      User-Agent:
-      - Travis/1.5.5 (Darwin; Ruby 1.9.3-p385; RubyGems 2.0.3) Faraday/0.8.8 Typhoeus/0.6.5
       Accept:
       - application/json; version=2
       Authorization:
@@ -86,9 +82,9 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Date:
-      - Sat, 05 Oct 2013 12:19:39 GMT
+      - Sat, 19 Oct 2013 09:13:49 GMT
       Etag:
-      - ! '"db1733019532f896c4efe6105a0dee49"'
+      - ! '"7c2fa1741ca4c87a5bc1846fada825af"'
       Server:
       - nginx/1.5.2
       Status:
@@ -106,15 +102,13 @@ http_interactions:
       X-Pattern:
       - /:repository_id/branches/:branch
       Content-Length:
-      - '800'
+      - '1666'
       Connection:
       - keep-alive
     body:
       encoding: US-ASCII
-      string: ! '{"branch":{"id":1342879,"repository_id":95390,"commit_id":1565667,"number":"392","config":{".result":"parse_error",".result_message":"expected
-        <block end>, but found Key while parsing a block collection at line 6 column
-        3"},"state":"failed","started_at":"2013-10-04T14:48:47Z","finished_at":"2013-10-04T14:48:48Z","duration":1,"job_ids":[1830576],"pull_request":false},"commit":{"id":1565667,"sha":"a76c817a24ae929e7a94def45b89f27299b3ca41","branch":"events-framework","message":"[#58224010]
-        add mongo to travis ci yaml","committed_at":"2013-10-04T14:48:39Z","author_name":"paladiy","author_email":"olexanderpaladiy@gmail.com","committer_name":"paladiy","committer_email":"olexanderpaladiy@gmail.com","compare_url":"https://github.com/rails/rails-private/compare/4761801cccb9...a76c817a24ae"}}'
+      string: ! '{"branch":{"id":1443071,"repository_id":95390,"commit_id":1684724,"number":"641","state":"started","started_at":"2013-10-19T09:13:35Z","finished_at":null,"duration":null,"job_ids":[1974515],"pull_request":false},"commit":{"id":1684724,"sha":"9ba68cf72ce47ee377abfe8de9a2df58c183e284","branch":"events-framework","message":"[#59112124]
+        publish monitoring event when finish test","committed_at":"2013-10-18T14:42:04Z","author_name":"paladiy","author_email":"olexanderpaladiy@gmail.com","committer_name":"paladiy","committer_email":"olexanderpaladiy@gmail.com","compare_url":"https://github.com/rails/rails-private/compare/e022614de429...9ba68cf72ce4"}}'
     http_version:
-  recorded_at: Sat, 05 Oct 2013 12:19:42 GMT
+  recorded_at: Sat, 19 Oct 2013 09:13:54 GMT
 recorded_with: VCR 2.6.0
