--- a/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_passed/.yml
+++ b/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_passed/.yml
@@ -7,8 +7,6 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      User-Agent:
-      - Travis/1.5.5 (Darwin; Ruby 1.9.3-p385; RubyGems 2.0.3) Faraday/0.8.8 Typhoeus/0.6.5
       Accept:
       - application/json; version=2
       Authorization:
@@ -29,9 +27,9 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Date:
-      - Sat, 05 Oct 2013 12:19:38 GMT
+      - Sat, 19 Oct 2013 09:13:47 GMT
       Etag:
-      - ! '"eb2a1678701a75e0af71a6180593d08c"'
+      - ! '"7c2fa1741ca4c87a5bc1846fada825af"'
       Server:
       - nginx/1.5.2
       Status:
@@ -49,14 +47,14 @@ http_interactions:
       X-Pattern:
       - /:owner_name/:name
       Content-Length:
-      - '324'
+      - '308'
       Connection:
       - keep-alive
     body:
       encoding: US-ASCII
-      string: ! '{"repo":{"id":95390,"slug":"rails/rails-private","description":"","last_build_id":1345750,"last_build_number":"395","last_build_state":"passed","last_build_duration":730,"last_build_language":null,"last_build_started_at":"2013-10-04T21:02:25Z","last_build_finished_at":"2013-10-04T21:14:35Z","github_language":"Ruby"}}'
+      string: ! '{"repo":{"id":95390,"slug":"rails/rails-private","description":"","last_build_id":1443071,"last_build_number":"641","last_build_state":"started","last_build_duration":null,"last_build_language":null,"last_build_started_at":"2013-10-19T09:13:35Z","last_build_finished_at":null,"github_language":"Ruby"}}'
     http_version:
-  recorded_at: Sat, 05 Oct 2013 12:19:41 GMT
+  recorded_at: Sat, 19 Oct 2013 09:13:51 GMT
 - request:
     method: get
     uri: https://api.travis-ci.com/repos/95390/branches/master
@@ -64,8 +62,6 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
-      User-Agent:
-      - Travis/1.5.5 (Darwin; Ruby 1.9.3-p385; RubyGems 2.0.3) Faraday/0.8.8 Typhoeus/0.6.5
       Accept:
       - application/json; version=2
       Authorization:
@@ -86,9 +82,9 @@ http_interactions:
       Content-Type:
       - application/json;charset=utf-8
       Date:
-      - Sat, 05 Oct 2013 12:19:38 GMT
+      - Sat, 19 Oct 2013 09:13:48 GMT
       Etag:
-      - ! '"f7bacd3d829698a4cf1ab3a8d122d9fc"'
+      - ! '"fa6a918db0fe1d44aaa51c19d01b0891"'
       Server:
       - nginx/1.5.2
       Status:
@@ -106,18 +102,14 @@ http_interactions:
       X-Pattern:
       - /:repository_id/branches/:branch
       Content-Length:
-      - '957'
+      - '1632'
       Connection:
       - keep-alive
     body:
       encoding: US-ASCII
-      string: ! '{"branch":{"id":1335197,"repository_id":95390,"commit_id":1556607,"number":"384","config":{"language":"ruby","rvm":["2.0.0"],"before_script":["cp
-        config/database.travis.yml config/database.yml","RAILS_ENV=test bundle exec
-        rake db:create db:migrate db:schema:load"],"script":"bundle exec rspec --format
-        progress spec","notifications":{"email":["team@labs.sendgrid.com"]},".result":"configured"},"state":"passed","started_at":"2013-10-03T17:19:02Z","finished_at":"2013-10-03T17:36:32Z","duration":1050,"job_ids":[1818653],"pull_request":false},"commit":{"id":1556607,"sha":"dad3d22ad1eef21ec7fdc8973bab0213a267635f","branch":"master","message":"[#58174688]
-        change tests","committed_at":"2013-10-03T16:24:44Z","author_name":"Alexey
+      string: ! '{"branch":{"id":1446122,"repository_id":95390,"commit_id":1688480,"number":"649","state":"passed","started_at":"2013-10-18T20:12:38Z","finished_at":"2013-10-18T20:23:26Z","duration":648,"job_ids":[1979212],"pull_request":false},"commit":{"id":1688480,"sha":"c00e43c06f1c84c6005ba26e5e5704dc4064da18","branch":"master","message":"css","committed_at":"2013-10-18T20:05:17Z","author_name":"Alexey
         Vasiliev","author_email":"leopard.not.a@gmail.com","committer_name":"Alexey
-        Vasiliev","committer_email":"leopard.not.a@gmail.com","compare_url":"https://github.com/rails/rails-private/compare/8b5265626bb3...dad3d22ad1ee"}}'
+        Vasiliev","committer_email":"leopard.not.a@gmail.com","compare_url":"https://github.com/rails/rails-private/compare/cd8a61a091b8...c00e43c06f1c"}}'
     http_version:
-  recorded_at: Sat, 05 Oct 2013 12:19:41 GMT
+  recorded_at: Sat, 19 Oct 2013 09:13:52 GMT
 recorded_with: VCR 2.6.0
