--- a/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_repository_was_not_found/.yml
+++ b/spec/vcr/Capistrano_CI_Clients_TravisPro/_state/when_repository_was_not_found/.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - application/json; version=2
+      - application/vnd.travis-ci.2+json
       Authorization:
       - token secret_token
   response:
@@ -19,9 +19,9 @@ http_interactions:
       Content-Type:
       - text/html;charset=utf-8
       Date:
-      - Sat, 19 Oct 2013 09:13:49 GMT
+      - Sat, 21 Jun 2014 13:11:47 GMT
       Server:
-      - nginx/1.5.2
+      - nginx/1.5.7
       Status:
       - 403 Forbidden
       Strict-Transport-Security:
@@ -35,8 +35,8 @@ http_interactions:
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: access denied
     http_version: 
-  recorded_at: Sat, 19 Oct 2013 09:13:54 GMT
-recorded_with: VCR 2.6.0
+  recorded_at: Sat, 21 Jun 2014 13:11:47 GMT
+recorded_with: VCR 2.9.2
